metadata/force-app/main/default/objects/CustomName_vkMVW__c/CustomName_vkMVW__c.object-meta.xml
<CustomObject>
    <description>Description_dCcVw</description>
    <label>CustomLabel_PlAnX</label>
    <nameField>
        <label>CustomLabel_PlAnX</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_PlAnXs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>