metadata/force-app/main/default/objects/CustomName_vkMVW__c/fields/CustomField_mjCdJ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_mjCdJ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldRNoCn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>