metadata/force-app/main/default/objects/CustomName_vkMVW__c/fields/CustomField_vRqFD__c.field-meta.xml
<CustomField>
    <fullName>CustomField_vRqFD__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldAQdXh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>